--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,19 @@
 	/*	font-family: "Calibri";*/
 }
 
+
+.bgd {
+	font-family: "Bitcount Grid Double", system-ui;
+	font-optical-sizing: auto;
+	font-weight: 400;
+	font-style: normal;
+	font-variation-settings:
+		"slnt" 0,
+		"CRSV" 0.5,
+		"ELSH" 0,
+		"ELXP" 0;
+}
+
 nav {
 	background: grey;
 	padding: 20px;
@@ -38,8 +51,8 @@ ul li a.active {
 
 .Page_Title {
 	font-size: 50px;
-	font-family: Proxima-Nova-SemiBold;
-	margin-left: 10px;
+	margin-left: 20px;
+	margin-top: 10px;
 }
 
 .Projects_Container {
@@ -49,13 +62,49 @@ ul li a.active {
 .Project_Container {
 	padding-top: 10px;
 	padding-bottom: 10px;
+	/*	border: 0.5px solid black;*/
 }
 
 .Project_Title {
 	font-size: 25px;
+	color: blue;
 }
 
 .About_Body {
 	white-space: pre-line;
 	margin-left: 20px;
+	font-family: bgd;
+}
+
+.tag {
+	display: inline-block;
+	padding: 4px 15px;
+	margin-top: 5px;
+	margin-right: 2px;
+	background-color: #e0e0e0;
+	color: #333;
+	border-radius: 20px;
+	font-family: sans-serif;
+	font-size: 0.9em;
+	text-decoration: none;
+	transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.Project_Title .Page_Title {
+	font-family: "Bitcount Grid Double", system-ui;
+	font-optical-sizing: auto;
+	font-weight: 400;
+	font-style: normal;
+	font-variation-settings:
+		"slnt" 0,
+		"CRSV" 0.5,
+		"ELSH" 0,
+		"ELXP" 0;
+
+}
+
+hr.solid {
+	border-top: 8px solid #bbb;
+	border-radius: 5px;
+	margin-top: 5px;
 }
