--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ ul li a.active {
 .Project_Container {
 	padding-top: 10px;
 	padding-bottom: 10px;
+	max-width: 850px;
 	/*	border: 0.5px solid black;*/
 }
 
